[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icon-did-sdk"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "PARAMETA Corp", email = "t_pds@parametacorp.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "ecdsa[gmpy2]==0.18.0",
  "iconsdk~=2.4.5",
  "jwcrypto @ git+https://github.com/iconloop/jwcrypto.git",
  "loguru~=0.7.2",
  "pydantic[dotenv]==1.10.7",
  "validators==0.21.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest~=7.2.2",
  "pytest-asyncio==0.21.1",
  "pytest-cov~=4.0.0",
  "pytest-mock~=3.10.0",
  "anyio[trio]~=3.7.0",
]
all = [
  "icon-did-sdk[dev]",
]

[project.urls]
Documentation = "https://github.com/iconloop/did-sdk-python#readme"
Issues = "https://github.com/iconloop/did-sdk-python/issues"
Source = "https://github.com/iconloop/did-sdk-python"

[tool.hatch.version]
path = "didsdk/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["didsdk"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=app {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "didsdk/__about__.py",
  "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
